src/objects/Stationery__c.object
<CustomObject>
    <fields>
        <fullName>Book_Name__c</fullName>
        <label>Book Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Price__c</fullName>
        <description>MRP of the Book</description>
        <label>Book Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Writter__c</fullName>
        <description>Name of the Author</description>
        <label>Book Writter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Stationery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stationery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stationeries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>